[project]
name = "rlpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "pillow>=11.0.0",
    "matplotlib>=3.9.2",
    "ipycanvas>=0.13.3",
]

[dependency-groups]
dev = ["ruff>=0.7.3", "jupyter>=1.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
